--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hi</title>
 </head>
-<body bgcolor="blue">
+<body>
     <h1>
         Ấn dzô <span><a href ="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">đây</a></span> đi
     </h1>
