--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Hi</title>
 </head>
 <body>
-    <h1>
-        Ấn dzô <span><a href ="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">đây</a></span> đi
-    </h1>
+    <h1><a href ="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">day la link</a></h1>
+    <p>Day la paragraph.</p>
+    <img src="img.jpg" alt "My profile picture">
 </body>
 </html>
