--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hi</title>
 </head>
-<body>
-    <h1><a href ="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">day la link</a></h1>
+<body style="background-color:powderblue">
+    <h1 style="background-color:antiquewhite"><a href ="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">day la link</a></h1>
+    <hr>
     <p>Day la paragraph.</p>
-    <img src="img.jpg" alt "My profile picture">
-    <p title="X">x</p>
+    <hr>
+    <img src="img.jpg" width="20%"  alt "My profile picture">
+    <hr>
+    <p style="background-color:aquamarine;color:cornflowerblue;text-align: center;" title="X">x</p>
 </body>
 </html>
