June 9th commit

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <hr>
     <p>Day la paragraph.</p>
     <hr>
-    <img src="img.jpg" width="20%"  alt "My profile picture">
+    <img src="img.jpg" width="20%"  alt="My profile picture">
     <hr>
     <p style="background-color:aquamarine;color:cornflowerblue;text-align: center;" title="X">x</p>
+    <strong>This is <abbr title="IMPORTANT!!!!">important</abbr>!!!!</strong>
 </body>
 </html>
