--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        @font-face {
+            font-family: OldFace;
+            src: url(src/font.otf);
+        }
+        @font-face {
+            font-family: ;
+            src: url();
+        }
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hi</title>
+    <title>X</title>
 </head>
-<body style="background-color:powderblue">
-    <h1 style="background-color:antiquewhite"><a href ="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">day la link</a></h1>
-    <hr>
-    <p>Day la paragraph.</p>
-    <hr>
-    <img src="img.jpg" width="20%"  alt="My profile picture">
-    <hr>
-    <p style="background-color:aquamarine;color:cornflowerblue;text-align: center;" title="X">x</p>
-    <strong>This is <abbr title="IMPORTANT!!!!">important</abbr>!!!!</strong>
+<body style="background-color:black;color:white">
+    <p style="text-align: center;font-size: 70px;font-family:'OldFace';padding: 0px;" title="Apocalypse - Cigarettes After Sex">APOCALYPSE</p>
+    <p style="text-align: center;font-size: 35px;font-family:'OldFace';padding: 0px" title="Cigarettes After Sex">Cigarettes After Sex</p>
 </body>
 </html>
