--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body style="background-color:black;color:white">
     <p style="text-align: center;font-size: 70px;font-family:'OldFace';padding: 0px;" title="Apocalypse - Cigarettes After Sex">APOCALYPSE</p>
     <p style="text-align: center;font-size: 35px;font-family:'OldFace';padding: 0px" title="Cigarettes After Sex">Cigarettes After Sex</p>
-    <p style="text-align:center;"><iframe width="80%" height="45%"
-    src="https://www.youtube.com/watch?v=Kmz5oyaIEMI?controls=0"></iframe></p>
+    <p style="text-align:center;"><iframe width="1100px" height="600px"
+    src="https://www.youtube.com/embed/Kmz5oyaIEMI?controls=0"></iframe></p>
 </body>
 </html>
