--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 <head>
     <style>
+        body {
+            background-color: black;
+        }
+        p {
+            align-items: center;
+            text-align: center;
+            color:white;
+            margin:0px;
+        }
         @font-face {
             font-family: OldFace;
             src: url(src/font.otf);
@@ -10,12 +19,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>X</title>
+    <title>X's playground</title>
+    <link rel="icon" type="image/x-icon" href="src/favicon.jpg">
 </head>
-<body style="background-color:black;color:white">
-    <p style="text-align: center;font-size: 70px;font-family:'OldFace';padding: 0px;" title="Apocalypse - Cigarettes After Sex">APOCALYPSE</p>
-    <p style="text-align: center;font-size: 35px;font-family:'OldFace';padding: 0px" title="Cigarettes After Sex">Cigarettes After Sex</p>
-    <p style="text-align:center;"><iframe width="80%" height="600px"
+<body>
+    <p style="font-size: 70px;font-family:'OldFace';" title="Apocalypse - Cigarettes After Sex">APOCALYPSE</p>
+    <p style="font-size: 25px;font-family:'OldFace';" title="Cigarettes After Sex">CIGARETTES AFTER SEX</p>
+    <p style="margin:50px"><iframe width="80%" height="600px"
     src="https://www.youtube.com/embed/Kmz5oyaIEMI?controls=0"></iframe></p>
 </body>
 </html>
