add navigation bar

--- a/index.html
+++ b/index.html
@@ -5,24 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>X's playground</title>
+    <title>cigarettesaftersex</title>
     <link rel="icon" type="image/x-icon" href="src/favicon.jpg">
 </head>
-<body>
+<body class="notabout">
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="https://www.facebook.com/copcopne" target="_blank">Contact</a></li>
+        <li><a href="/html/about.html">About CAS</a></li>
+      </ul>
     <p style="font-size: 70px;font-family:'OldFace';" title="Apocalypse - Cigarettes After Sex">APOCALYPSE</p>
     <p style="font-size: 25px;font-family:'OldFace';" title="Cigarettes After Sex"><a href="https://www.cigarettesaftersex.com/" target="_blank" title="Cigarettes After Sex's official website">CIGARETTES AFTER SEX</a></p>
     <p style="margin:50px"><iframe width="80%" height="600px"
     src="https://www.youtube.com/embed/Kmz5oyaIEMI?controls=0"></iframe></p>
     <br><br><br>
-    <table style="font-size:200%;">
-        <th>hehe</th>
-        <th>1</th>
-        <th>2</th>
-        <tr>
-            <td>3</td>
-            <td>4</td>
-            <td>5</td>
-        </tr>
-    </table>
 </body>
 </html>
