--- a/html/about.html
+++ b/html/about.html
@@ -43,7 +43,7 @@
         <li><a href="/index.html">Home</a></li>
         <li><a href="#news">News</a></li>
         <li><a href="https://www.facebook.com/copcopne" target="_blank">Contact</a></li>
-        <li><a href="/html/about.html">About CAS</a></li></ul>
+        <li><a href="/x/html/about.html">About CAS</a></li></ul>
         <p style="font-size: 300%;font-family:'OldFace';" title="Cigarettes After Sex"><a href="https://www.cigarettesaftersex.com/" target="_blank" title="Cigarettes After Sex's official website">CIGARETTES AFTER SEX</a></p>
      <div class="bg-image"></div>    <div class="bg-text">
         <blockquote cite="https://en.wikipedia.org/wiki/Cigarettes_After_Sex">
