--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#news">News</a></li>
         <li><a href="https://www.facebook.com/copcopne" target="_blank">Contact</a></li>
-        <li><a href="/html/about.html">About CAS</a></li>
+        <li><a href="/x/html/about.html">About CAS</a></li>
       </ul>
     <p style="font-size: 70px;font-family:'OldFace';" title="Apocalypse - Cigarettes After Sex">APOCALYPSE</p>
     <p style="font-size: 25px;font-family:'OldFace';" title="Cigarettes After Sex"><a href="https://www.cigarettesaftersex.com/" target="_blank" title="Cigarettes After Sex's official website">CIGARETTES AFTER SEX</a></p>
