--- a/html/about.html
+++ b/html/about.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="x/css/styles.css">
+    <link rel="stylesheet" href="/x/css/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cigarettesaftersex</title>
-    <link rel="icon" type="image/x-icon" href="/src/favicon.jpg">
+    <link rel="icon" type="image/x-icon" href="/x/src/favicon.jpg">
     <style>
     body, html {
         height:100%;
@@ -40,7 +40,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="/index.html">Home</a></li>
+        <li><a href="/x/index.html">Home</a></li>
         <li><a href="#news">News</a></li>
         <li><a href="https://www.facebook.com/copcopne" target="_blank">Contact</a></li>
         <li><a href="/x/html/about.html">About CAS</a></li></ul>
