--- a/html/about.html
+++ b/html/about.html
@@ -15,7 +15,7 @@
         box-sizing: border-box;
     }
     .bg-image {
-        background-image : url("/src/2500.webp");
+        background-image : url("/x/src/2500.webp");
         height:100%;
         background-repeat: no-repeat;
         background-size: cover;filter: blur(8px);
