--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         box-sizing: border-box;
     }
     .bg-image {
-        background-image : url("/x/src/2500.webp");
+        background-image : url("src/2500.webp");
         height:100%;
         background-repeat: no-repeat;
         background-size: cover;filter: blur(8px);
@@ -40,10 +40,10 @@
 </head>
 <body>
     <ul>
-        <li><a href="/index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#news">News</a></li>
         <li><a href="https://www.facebook.com/copcopne" target="_blank">Contact</a></li>
-        <li><a href="/about.html">About CAS</a></li></ul>
+        <li><a href="about.html">About CAS</a></li></ul>
         <p style="font-size: 300%;font-family:'OldFace';" title="Cigarettes After Sex"><a href="https://www.cigarettesaftersex.com/" target="_blank" title="Cigarettes After Sex's official website">CIGARETTES AFTER SEX</a></p>
      <div class="bg-image"></div>    <div class="bg-text">
         <blockquote cite="https://en.wikipedia.org/wiki/Cigarettes_After_Sex">
