--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <style>
         abbr {
             display:contents;
-            color:antiquewhite;
+            color:darkgray;
         }
     body, html {
         height:99%;
