--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="cigarettesaftersex">
+    <meta name="keywords" contents="x, cigarettes after sex, ciagrettesaftersex, cas, blog">
     <title>cigarettesaftersex</title>
     <link rel="icon" type="image/x-icon" href="src/favicon.jpg">
 </head>
 <body class="notabout">
-    <ul>
+    <nav><ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#news">News</a></li>
         <li><a href="https://www.facebook.com/copcopne" target="_blank">Contact</a></li>
         <li><a href="about.html">About CAS</a></li>
-      </ul>
-    <p style="font-size: 70px;font-family:'OldFace';" title="Apocalypse - Cigarettes After Sex">APOCALYPSE</p>
-    <p style="font-size: 25px;font-family:'OldFace';" title="Cigarettes After Sex"><a href="https://www.cigarettesaftersex.com/" target="_blank" title="Cigarettes After Sex's official website">CIGARETTES AFTER SEX</a></p>
-    <p style="margin:50px"><iframe width="80%" height="600px"
-    src="https://www.youtube.com/embed/Kmz5oyaIEMI?controls=0"></iframe></p>
+      </ul></nav>
+    <p style="font-size: 70px;font-family:'OldFace',serif;" title="Apocalypse - Cigarettes After Sex">APOCALYPSE</p>
+    <p style="font-size: 25px;font-family:'OldFace',serif;" title="Cigarettes After Sex"><a href="https://www.cigarettesaftersex.com/" target="_blank" title="Cigarettes After Sex's official website">CIGARETTES AFTER SEX</a></p>
+    <p style="padding:50px"><iframe width="1260" height="708,75" src="https://www.youtube.com/embed/Kmz5oyaIEMI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
     <br><br><br>
 </body>
 </html>
