--- a/about.html
+++ b/about.html
@@ -43,17 +43,27 @@
     </style>
 </head>
 <body>
-    <nav><ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#news">News</a></li>
-        <li><a href="https://www.facebook.com/copcopne" target="_blank">Contact</a></li>
-        <li><a href="about.html">About CAS</a></li></ul></nav>
-        <p style="font-size: 300%;font-family:'OldFace',serif;" title="Cigarettes After Sex"><a href="https://www.cigarettesaftersex.com/" target="_blank" title="Cigarettes After Sex's official website">CIGARETTES AFTER SEX</a></p>
-     <div class="bg-image"></div>    <div class="bg-text">
+    <nav>
+        <div>
+            <ul class="navbar">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a class="active" href="about.html">About CAS</a></li>
+            </ul>
+        </div>
+    </nav>
+    <p style="font-size: 70px;font-family:'OldFace',serif;" title="Cigarettes After Sex">
+        <a href="https://www.cigarettesaftersex.com/" target="_blank" title="Cigarettes After Sex's official website">CIGARETTES AFTER SEX
+        </a>
+    </p>
+     <div class="bg-image">
+     </div>    
+     <div class="bg-text" style="font-size:24px;">
         <blockquote cite="https://en.wikipedia.org/wiki/Cigarettes_After_Sex">
             Cigarettes After Sex is an American <abbr title="Dream pop is a subgenre of alternative rock and neo-psychedelia that emphasizes atmosphere and sonic texture as much as pop melody. Common characteristics include breathy vocals, dense productions, and effects such as reverb, echo, tremolo, and chorus. It often overlaps with the related genre.">dream pop</abbr> band formed in <abbr title="El Paso is a city in and the county seat of El Paso County, Texas, United States. The 2020 population of the city from the U.S. Census Bureau was 678,815, making it the 22nd-largest city in the U.S. and the sixth-largest city in Texas.">El Paso, Texas</abbr>, in 2008 by Greg Gonzalez. The band is known for their ethereal, <abbr title="Limerence is a state of mind which results from romantic or non-romantic feelings for another person, and typically includes intrusive, melancholic thoughts, or tragic concerns for the object of one's affection as well as a desire to form or maintain a relationship with the object of love and to have one's feelings reciprocated. Limerence can also be defined as an involuntary state of intense desire.">limerent</abbr> and often dream-like musical style, lyrics often based on the themes of romance and love, as well as Gonzalez's voice, which has been described as "<abbr title="Androgyny is the possession of both masculine and feminine characteristics. Androgyny may be expressed with regard to biological sex, gender identity, or gender expression.">androgynous</abbr>". While marketed as an ambient pop band, Cigarettes After Sex are also considered to be <abbr title="Shoegaze (originally called shoegazing and sometimes conflated with "dream pop") is a subgenre of indie and alternative rock characterized by its ethereal mixture of obscured vocals, guitar distortion and effects, feedback, and overwhelming volume.">shoegaze</abbr>, <abbr title="Slowcore, also known as sadcore, is a subgenre of indie rock and alternative rock characterized by slower tempos, minimalist instrumentation, and subdued lyrical performances.">slowcore</abbr> and <abbr title="Indie rock is a subgenre of rock music that originated in the United States, United Kingdom and New Zealand from the 1970s to the 1980s. Originally used to describe independent record labels, the term became associated with the music they produced and was initially used interchangeably with alternative rock or guitar pop rock">indie rock</abbr>.
             The band's debut extended play (EP), I., was released in 2012, with the song "Nothing's Gonna Hurt You Baby" eventually becoming a <abbr title="In the entertainment industry, sleeper hit refers to a film, television series, music release, video game, or some other entertainment product that was unpromising on release but became a success later on. A sleeper hit may have little promotion or lack a successful launch but gradually develops a fan following that garners it media attention, which in turn increases its public exposure and public interest in the product.">sleeper hit</abbr> through commercial <abbr title="Music licensing is the licensed use of copyrighted music. Music licensing is intended to ensure that the owners of copyrights on musical works are compensated for certain uses of their work.">licensing</abbr>. After the release of the standalone single "Affection" in 2015, the band released their <abbr title="Cigarettes After Sex is the debut studio album by American ambient pop band Cigarettes After Sex. It was released on June 9, 2017, by Partisan Records and received positive reviews from critics.">self-titled debut studio album</abbr> in June 2017 to positive reviews. The band's second studio album, <abbr title="Cry is the second studio album by American ambient pop band Cigarettes After Sex, released through Partisan Records on October 25, 2019. It was preceded by the single *Heavenly*">Cry</abbr>, was released on October 25, 2019.
         </blockquote>
-</div>
+    </div>
 </body>
 </html>
