--- a/index.html
+++ b/index.html
@@ -6,20 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="cigarettesaftersex">
-    <meta name="keywords" contents="x, cigarettes after sex, ciagrettesaftersex, cas, blog">
+    <meta name="keywords" contents="x, cigarettes after sex, ciagrettesaftersex, cas, casblog">
     <title>cigarettesaftersex</title>
     <link rel="icon" type="image/x-icon" href="src/favicon.jpg">
 </head>
 <body class="notabout">
-    <nav><ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#news">News</a></li>
-        <li><a href="https://www.facebook.com/copcopne" target="_blank">Contact</a></li>
-        <li><a href="about.html">About CAS</a></li>
-      </ul></nav>
-    <p style="font-size: 70px;font-family:'OldFace',serif;" title="Apocalypse - Cigarettes After Sex">APOCALYPSE</p>
-    <p style="font-size: 25px;font-family:'OldFace',serif;" title="Cigarettes After Sex"><a href="https://www.cigarettesaftersex.com/" target="_blank" title="Cigarettes After Sex's official website">CIGARETTES AFTER SEX</a></p>
-    <p style="padding:50px"><iframe width="1260" height="708,75" src="https://www.youtube.com/embed/Kmz5oyaIEMI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
-    <br><br><br>
+    <nav>
+        <div>
+            <ul class="navbar">
+                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html">About CAS</a></li>
+            </ul>
+        </div>
+    </nav>
+    <p style="font-size: 70px;font-family:'OldFace',serif;" title="Apocalypse - Cigarettes After Sex">APOCALYPSE
+    </p>
+    <p style="font-size: 25px;font-family:'OldFace',serif;" title="Cigarettes After Sex">
+        <a href="https://www.cigarettesaftersex.com/" target="_blank" title="Cigarettes After Sex's official website" style="position:sticky;position:-webkit-sticky;bottom:0;">
+            CIGARETTES AFTER SEX
+        </a>
+    </p>
+    <p style="padding:10px">
+        <iframe width="1050" height="590,625" src="https://www.youtube.com/embed/Kmz5oyaIEMI?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+        </iframe>
+    </p>
 </body>
 </html>
