--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </p>
     <p style="font-size: 25px;font-family:'OldFace',serif;" title="Cigarettes After Sex">
         <a href="https://www.cigarettesaftersex.com/" target="_blank" title="Cigarettes After Sex's official website" style="position:sticky;position:-webkit-sticky;bottom:0;">
-            CIGARETTES AFTER SEX
+            CIGARETTES AFTrER SEX
         </a>
     </p>
     <p style="padding:10px">
